# docs/swagger.json
@@ -330,37 +330,6 @@
                         }
                     }
                 }
-            },
-            "delete": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "admin-product"
-                ],
-                "summary": "Delete product",
-                "parameters": [
-                    {
-                        "description": "Product article request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.ProductArticleRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_phenirain_sso_internal_dto_response.Response-string"
-                        }
-                    }
-                }
             }
         },
         "/admin/product/base-model": {
@@ -483,6 +452,32 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/github_com_phenirain_sso_internal_dto_response.Response-api_ExtendedProductResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin-product"
+                ],
+                "summary": "Delete product",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Product article",
+                        "name": "article",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_phenirain_sso_internal_dto_response.Response-string"
                         }
                     }
                 }
@@ -845,10 +840,7 @@
             }
         },
         "/client/product": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
+            "get": {
                 "produces": [
                     "application/json"
                 ],
@@ -858,13 +850,42 @@
                 "summary": "Get products",
                 "parameters": [
                     {
-                        "description": "Get products request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object"
-                        }
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "Minimum price",
+                        "name": "min_price",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "description": "Maximum price",
+                        "name": "max_price",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Brand ID",
+                        "name": "brand_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search term (article, name, brand)",
+                        "name": "term",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -911,23 +932,6 @@
             }
         },
         "/client/product/favorites": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "client-product"
-                ],
-                "summary": "Get favorite products",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/github_com_phenirain_sso_internal_dto_response.Response-api_ProductsResponse"
-                        }
-                    }
-                }
-            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -988,24 +992,35 @@
                 }
             }
         },
-        "/client/profile": {
+        "/client/product/{id}/favorites": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "client"
+                    "client-product"
                 ],
-                "summary": "Get client profile",
+                "summary": "Get favorite products",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Client ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_phenirain_sso_internal_dto_response.Response-api_ClientResponse"
+                            "$ref": "#/definitions/github_com_phenirain_sso_internal_dto_response.Response-api_ProductsResponse"
                         }
                     }
                 }
-            },
+            }
+        },
+        "/client/profile": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -1038,27 +1053,22 @@
                 }
             }
         },
-        "/client/register": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
+        "/client/profile/{id}": {
+            "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "client"
                 ],
-                "summary": "Register client",
+                "summary": "Get client profile",
                 "parameters": [
                     {
-                        "description": "Client request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object"
-                        }
+                        "type": "integer",
+                        "description": "Client ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1413,14 +1423,6 @@
                     "items": {
                         "$ref": "#/definitions/api.OrderResponse"
                     }
-                }
-            }
-        },
-        "api.ProductArticleRequest": {
-            "type": "object",
-            "properties": {
-                "article": {
-                    "type": "string"
                 }
             }
         },
